# docuverse

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.claude/: settings.local.json
.streamlit/: config.toml
api/: __init__.py  dependencies.py  main.py  schemas.py
api/middleware/: cost_cap.py
api/routes/: __init__.py  corpus.py  health.py  ingest.py  query.py
config/: __init__.py  config.yaml  settings.py
data/eval/: constitution_dataset.json  v1_dataset.json  v1_realistic_dataset.json
docker/: nginx.conf  supervisord.conf
docs/: ARCHITECTURE.md  EVALUATION.md  FUTURE_IMPROVEMENTS.md  ITERATION_LOG.md  PHASE_1_WALKTHROUGH.md
docs/eval_results/: 32afbadd-c867-4318-828a-b9b8f9d18369.json  65c9c190-ce90-4164-ab63-e80dcd08c960.json  89192d11-4ebd-47a4-8a60-93e77a31690e.json  a14988ca-d8fc-47ee-ae73-53b683e3b3d8.json  ab12c0f5-90db-4873-829f-b1d2b7dbfa53.json  ce505563-bae8-42c7-95c2-6f9573147dfd.json  ee0cf8f6-7560-4f5d-a331-a1099b78cb92.json
scripts/: README.md  download_sample_pdfs.py  evaluate.py  generate_sample_pdf.py  ingest_corpus.py  measure_latency.py
src/: __init__.py  factory.py  orchestrator.py
src/evaluation/: dataset.py  ragas_evaluator.py  report.py
src/generation/: __init__.py  base.py  openai_generator.py  prompts.py
src/ingestion/: __init__.py  academic_chunker.py  (+9 more)
tests/: __init__.py  conftest.py
ui/: app.py
ui-next/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+48 files in other folders)
